add_executable(whole_graph_mp_test whole_graph_mp_test.cu)
target_link_libraries(whole_graph_mp_test whole_graph)

add_executable(whole_graph_sp_test whole_graph_sp_test.cu)
target_link_libraries(whole_graph_sp_test whole_graph)

add_executable(whole_graph_perf_scan whole_graph_perf_scan.cu)
target_link_libraries(whole_graph_perf_scan whole_graph)

add_executable(cu_mem_handle_perf cu_mem_handle_perf.cu)
target_link_libraries(cu_mem_handle_perf cuda)

add_executable(whole_graph_graph_test whole_graph_graph_test.cu)
target_link_libraries(whole_graph_graph_test whole_graph)